# mriynyk

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  answer_test.py  call_api.py  docker-compose.yml  load_parquet_to_postgres.py  look_student.py  main.py  pyproject.toml  questions.csv  solve_questions.py
frontend/: app.js  index.html  styles.css
mriynyk/: api.py  config.py  models.py  service.py  student_data.py
prompts/: direct_explain.j2  generate_workbook.j2  pick_topic.j2  solve_question.j2
scripts/: answer_test.py  call_api.py
